@@ -5,3 +5,4 @@
 - voyeurhouse.life - new domain (reallifecams.in)
 - uflash - fix listing, playback
 - pornhoarder - fix search, categories
+- noodlemagazine - fix playback
